--- a/Server/Server/Server.vcxproj.filters
+++ b/Server/Server/Server.vcxproj.filters
@@ -127,6 +127,9 @@
     <Filter Include="dispatch">
       <UniqueIdentifier>{b6f186fc-a22c-4529-af01-6b6562f70d3b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="msg">
+      <UniqueIdentifier>{e3178b1b-a53f-4582-8522-47d04eb058d0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cnet_type.cpp">
@@ -507,6 +510,24 @@
     </ClCompile>
     <ClCompile Include="cmsg_dispatch.cpp">
       <Filter>dispatch</Filter>
+    </ClCompile>
+    <ClCompile Include="Producer.cpp">
+      <Filter>rtc</Filter>
+    </ClCompile>
+    <ClCompile Include="RtpStreamRecv.cpp">
+      <Filter>rtc</Filter>
+    </ClCompile>
+    <ClCompile Include="NackGenerator.cpp">
+      <Filter>rtc</Filter>
+    </ClCompile>
+    <ClCompile Include="RtpStream.cpp">
+      <Filter>rtc</Filter>
+    </ClCompile>
+    <ClCompile Include="RtxStream.cpp">
+      <Filter>rtc</Filter>
+    </ClCompile>
+    <ClCompile Include="KeyFrameRequestManager.cpp">
+      <Filter>rtc</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -947,6 +968,27 @@
     </ClInclude>
     <ClInclude Include="cmsg_dispatch.h">
       <Filter>dispatch</Filter>
+    </ClInclude>
+    <ClInclude Include="cmsg_base_id.h">
+      <Filter>msg</Filter>
+    </ClInclude>
+    <ClInclude Include="Producer.hpp">
+      <Filter>rtc</Filter>
+    </ClInclude>
+    <ClInclude Include="RtpStreamRecv.hpp">
+      <Filter>rtc</Filter>
+    </ClInclude>
+    <ClInclude Include="NackGenerator.hpp">
+      <Filter>rtc</Filter>
+    </ClInclude>
+    <ClInclude Include="RtpStream.hpp">
+      <Filter>rtc</Filter>
+    </ClInclude>
+    <ClInclude Include="RtxStream.hpp">
+      <Filter>rtc</Filter>
+    </ClInclude>
+    <ClInclude Include="KeyFrameRequestManager.hpp">
+      <Filter>rtc</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
