--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,22 @@ Server/cmake-build-debug/CMakeFiles/3.22.3/CompilerIdC/CMakeCCompilerId.c
 Server/cmake-build-debug/CMakeFiles/3.22.3/CompilerIdC/CMakeCCompilerId.o
 Server/cmake-build-debug/CMakeFiles/3.22.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
 Server/cmake-build-debug/CMakeFiles/3.22.3/CompilerIdCXX/CMakeCXXCompilerId.o
+Server/.idea/.name
+Server/cmake-build-debug/cmake_install.cmake
+Server/cmake-build-debug/Makefile
+Server/cmake-build-debug/.cmake/api/v1/reply/cache-v2-e042d62aaafa30dc6242.json
+Server/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-f9a4f90169faccdba5eb.json
+Server/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-8cfcf0b2138c5b265970.json
+Server/cmake-build-debug/.cmake/api/v1/reply/directory-.-Release-f5ebdc15457944623624.json
+Server/cmake-build-debug/.cmake/api/v1/reply/directory-Server-Release-32374a7e03b102ec7378.json
+Server/cmake-build-debug/.cmake/api/v1/reply/index-2022-09-17T14-39-27-0635.json
+Server/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-ff5a8d0393c9d28f40b5.json
+Server/cmake-build-debug/CMakeFiles/CMakeDirectoryInformation.cmake
+Server/cmake-build-debug/CMakeFiles/Makefile.cmake
+Server/cmake-build-debug/CMakeFiles/Makefile2
+Server/cmake-build-debug/CMakeFiles/progress.marks
+Server/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+Server/cmake-build-debug/Server/cmake_install.cmake
+Server/cmake-build-debug/Server/Makefile
+Server/cmake-build-debug/Server/CMakeFiles/CMakeDirectoryInformation.cmake
+Server/cmake-build-debug/Server/CMakeFiles/progress.marks
